# roots

./: .clang-format  .clangd  .gitattributes  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  clean_local  compile_flags.txt  config.h.in  configure  configure.ac  configure_autoconf  configure_meson  install_local  install_test_local  meson.build
include/: roots.h
roots/: Makefile.am  Makefile.in  meson.build
roots/include/: meson.build  roots.h
roots/src/: Makefile.am  Makefile.in  check_a_b_compute_fa_fb.c  meson.build  roots_bisection.c  roots_brent.c  roots_dekker.c  roots_false_position.c  roots_info.c  roots_ridder.c  roots_secant.c  roots_toms748.c  utils.h
src/: Makefile.am  roots_bisection.c  roots_info_warn_error.c  utils.h
test/: Makefile.am  Makefile.in  meson.build  test_bisection.c  test_brent.c  test_dekker.c  test_false_position.c  test_ridder.c  test_secant.c  test_toms748.c
